2022-01-05  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.c (pkl_gen_pr_decl): Compile type closures
	conditionally but install environment unconditionally.
	(LMAP): Likewise.
	(pkl_gen_pr_array): Likewise.
	(pkl_gen_pr_struct): Likewise.
	* testsuite/poke.map/maps-structs-19.pk: Likewise.
	* testsuite/poke.map/nsmap-6.pk: Likewise.
	* testsuite/poke.pkl/scons-65.pk: New test.
	* testsuite/poke.pkl/scons-66.pk: Likewise.
	* testsuite/poke.pkl/scons-67.pk: Likewise.
	* testsuite/poke.map/write-structs-1.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

2022-01-04  David Faust  <david.faust@oracle.com>

	* testsuite/poke.pickles/btf-test.pk: New test.

2022-01-04  David Faust  <david.faust@oracle.com>

	* pickles/btf.pk (BTF_Header): Adjust constraint on magic number
	to properly set endianness as needed.

2022-01-04  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.c (pkl_gen_pr_type_struct): Do not install a
	writer closure in the AST type nodes for anonymous structs.

2022-01-04  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.c: Remove obsolete comments.  The GEN contexts
	are now exclusive so the ordering of conditional clauses doesn't
	matter anymore.

2022-01-04  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (union_writer): New function.
	* libpoke/pkl-gen.c (pkl_gen_pr_decl): Compile an union writer for
	unions.
	(pkl_gen_pr_type_struct): Likewise.
	(LMAP): Likewise.
	* testsuite/poke.map/write-unions-1.pk: New test.
	* testsuite/poke.map/write-unions-2.pk: Likewise.
	* testsuite/poke.map/write-unions-3.pk: Likewise.
	* testsuite/poke.map/ass-map-23.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

2022-01-04  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (struct_field_mapper): Fix backing up of GEN
	endianness.
	(struct_field_writer): Likewise.

2022-01-04  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* pickles/btf-dump.pk (btf_dump_type_vdata): Use EXCOND operator.