@@ -3551,12 +3551,11 @@ PKL_PHASE_BEGIN_HANDLER (pkl_gen_pr_type_struct)
       if (printer_closure == PVM_NULL)
         {
           RAS_FUNCTION_STRUCT_PRINTER (printer_closure, struct_type);
-          pkl_asm_insn (PKL_GEN_ASM, PKL_INSN_PUSH, printer_closure);
-          pkl_asm_insn (PKL_GEN_ASM, PKL_INSN_PEC);
           PKL_AST_TYPE_S_PRINTER (struct_type) = printer_closure;
         }
-      else
-        pkl_asm_insn (PKL_GEN_ASM, PKL_INSN_PUSH, printer_closure);
+
+      pkl_asm_insn (PKL_GEN_ASM, PKL_INSN_PUSH, printer_closure);
+      pkl_asm_insn (PKL_GEN_ASM, PKL_INSN_PEC);
 
       /* Invoke the printer.  */
       pkl_asm_insn (PKL_GEN_ASM, PKL_INSN_CALL); /* _ */
@@ -3573,12 +3572,11 @@ PKL_PHASE_BEGIN_HANDLER (pkl_gen_pr_type_struct)
       if (formater_closure == PVM_NULL)
         {
           RAS_FUNCTION_STRUCT_FORMATER (formater_closure, struct_type);
-          pkl_asm_insn (PKL_GEN_ASM, PKL_INSN_PUSH, formater_closure);
-          pkl_asm_insn (PKL_GEN_ASM, PKL_INSN_PEC);
           PKL_AST_TYPE_S_FORMATER (struct_type) = formater_closure;
         }
-      else
-        pkl_asm_insn (PKL_GEN_ASM, PKL_INSN_PUSH, formater_closure);
+
+      pkl_asm_insn (PKL_GEN_ASM, PKL_INSN_PUSH, formater_closure);
+      pkl_asm_insn (PKL_GEN_ASM, PKL_INSN_PEC);
 
       /* Invoke the formater.  */
       pkl_asm_insn (PKL_GEN_ASM, PKL_INSN_CALL); /* _ */
